@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Add a has_xs configuration option. Normally this is determined by looking
+  for XS files in the distro, but I have a new distro where I need to set this
+  explicitly.
+
+
 0.86     2017-11-12
 
 - Added the MinimumPerl plugin.
